# LMSInterface

./: .gitignore  AGENTS.md  CODEOWNERS  README.md  canvas_interface.py  pyproject.toml  test.py
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: release.yml
course_plans/: cst334_compact.yaml  cst334_from_sheet.yaml
lms_interface/: __init__.py  backends.py  canvas_interface.py  classes.py  cleanup_missing_ui.py  course_plan.py  helpers.py  interfaces.py  privacy.py
lms_interface/tests/: test_canvas_assignment_submissions.py  test_canvas_interface.py  test_course_plan.py  test_helpers.py  test_manual_grade.py  test_privacy.py
schemas/: course_plan.schema.yaml
scripts/: git_bump.sh  validate_course_plan.py  vendor_into_project.py
