[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lms_interface"]

[project]
name = "lms-interface"
version = "0.4.0"
description = "LMS interface library for teaching tools"
authors = [
    {name = "Sam Ogden", email = "samuel.s.ogden@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "canvasapi==3.2.0",
    "requests==2.32.2",
    "python-dotenv==1.0.1",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "ruff",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["lms_interface/tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["I"]
