[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lms_interface"]

[project]
name = "lms-interface"
version = "0.6.1"
description = "LMS interface library for teaching tools"
authors = [
    {name = "Sam Ogden", email = "samuel.s.ogden@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "canvasapi>=3.2,<4",
    "requests>=2.32.4,<3",
    "python-dotenv>=1,<2",
    "pyyaml>=6,<7",
    "pytest>=8.4.2",
]

[project.scripts]
lms-interface-helper = "lms_interface.helpers:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "ruff",
    "jsonschema",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["lms_interface/tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["I"]
